# cppray

./: .gitignore  CMakeLists.txt  README.md  build_ix.sh  configure_ubuntu.sh
cppray/: Background.cpp  CMakeLists.txt  Camera.cpp  PixelArray.cpp  RayTracer.cpp  Scene.cpp  SceneFactory.cpp  SceneRenderer.cpp  Shape.cpp  Vector3.h  cppray.cpp  cppray.h
cppray/console/: CMakeLists.txt  cppray.cpp
cppray/include/: cppray.h
cppray/lib/: CMakeLists.txt  Camera.cpp  LogTimer.cpp  PixelArray.cpp  Ray.cpp  RayTraceRenderData.cpp  RayTracer.cpp  SceneFactory.cpp  SceneRenderer.cpp
electray/: package-lock.json  package.json
test/: CMakeLists.txt  OtherSampleTest.cpp  SampleTest.cpp
